--- a/src/pages/ContactPage.scss
+++ b/src/pages/ContactPage.scss
@@ -13,6 +13,7 @@
 }
 @media screen and (max-width: 700px) {
   .contact-page-map_container{
+    margin-top: 60px;
     height: 70vh;
     padding: 60px 0 0 0;
     background-repeat: repeat;
