--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -1,6 +1,7 @@
 .content-container{
   width:100%;
   height:100%;
+
 }
 .content-container_up{
   margin-top: 30px;
@@ -13,7 +14,7 @@
   background: linear-gradient(0.25turn, #B3803E, #0D0B0B);
 }
 .header-container{
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 10px;
   width: 100%;
   display: flex;
