--- a/src/scss/ApartmentCard.scss
+++ b/src/scss/ApartmentCard.scss
@@ -13,6 +13,7 @@
   padding-top: 60px;
 
   .apartment-card-title {
+    margin-top: 55px;
     padding: 20px;
     
     h3{
